# Xeon-MMORPG-Emulator

./: AUTHORS  NEWS  README  ascent-tag  configure.ac  extract_git_revision.sh  extract_svn_revision.sh  freebsd_autotools.sh  make_precompiled_header.sh  make_precompiled_header_debug.sh  thanks.txt
extras/: eventspawningsystem.patch  fix_global_propsets.sh  general_todo.txt  shaman_todo.txt
extras/SVNRevisionExtractor/: RevisionExtractor.sln
extras/VindaireIRCBot/: VindaireVC9.sln  VindaireVC9.vcproj  vindaire.conf
extras/buildbot/: build_collision.bat  build_collision_x64.bat  build_hs.bat  build_hs_x64.bat
extras/dbcEditor/: BcdEditer.ini
extras/dependencies/: README.txt
sql/: 1008_AccountTemplate.sql  1008_CharacterTemplate.sql  1008_WorldTemplate.sql  516_CharacterTemplate.sql  830_AccountTemplate.sql  848_WorldTemplate.sql  877_AccountTemplate.sql  Aspire_Character_Structure.sql  Aspire_Login_Structure.sql  Aspire_World_Structure.sql  CharacterTemplate.sql  WorldTemplate.sql
src/: Makefile.am  ascent-logonserver.conf  ascent-realms.conf  ascent-voicechat.conf  ascent-world.conf  hearthstone-logonserver.conf  hearthstone-realms.conf  hearthstone-voicechat.conf  hearthstone-world.conf
src/hearthstone-logonserver/: AccountCache.cpp  AccountCache.h  AuthSocket.cpp  AuthSocket.h  AuthStructs.h  AutoPatcher.cpp  AutoPatcher.h  LogonCommServer.cpp  LogonCommServer.h  LogonConsole.cpp  LogonConsole.h  LogonOpcodes.cpp  LogonOpcodes.h  LogonStdAfx.cpp  LogonStdAfx.h  Main.cpp  Main.h  Makefile.am  PeriodicFunctionCall_Thread.h
src/hearthstone-realmserver/: CharacterHandler.cpp  ClientManager.cpp  ClientManager.h  ClusterManager.cpp  ClusterManager.h  LogonCommClient.cpp  LogonCommClient.h  LogonCommHandler.cpp  LogonCommHandler.h  Makefile.am  Master.cpp  Master.h  ObjectStorage.cpp  ObjectStorage.h  QueryHandler.cpp  RStdAfx.cpp  RStdAfx.h  Session.cpp  Session.h  Structures.h  WorkerOpcodes.h  WorkerServer.cpp  WorkerServer.h  WorkerServerSocket.cpp  WorkerServerSocket.h  WorldSocket.cpp  WorldSocket.h
src/scripts/src/GossipScripts/: Gossip_Battlemaster.cpp  Gossip_Innkeepers.cpp  GuardGossip.cpp  Makefile.am  Setup.h
src/scripts/src/ServerStatusPlugin/: Makefile.am  ServerStatusPlugin.cpp
win/: hearthstoneVC71.sln  hearthstoneVC80.sln  hearthstoneVC90.sln
(+859 files in other folders)
